# RoboSoccer_2021

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  hackit.sh  idlog.txt  robo_soccer_compile.sh
autom4te.cache/: output.1  requests  traces.0  traces.1
include/: config.h  config.h.in
src/: FSM.c  Makefile  Makefile.am  Makefile.in  PID.c  denoise.c  linearFilter.c  lostBotFinder.c  mathHelpers.c  roboAI.c  roboAI.h  roboSoccer  roboSoccer.c  test.c  utils.c
src/.deps/: avilib.Po  color.Po  gui.Po  imageCapture.Po  imageProc.Po  roboAI.Po  roboSoccer.Po  robotControl.Po  svdDynamic.Po  utils.Po  v4l2uvc.Po
src/API/: README.txt  btcomm.c  btcomm.h
src/API/.deps/: btcomm.Po
src/imagecapture/: imageCapture.c  imageCapture.h  imageProc.c  imageProc.h  luvcview.c  showdump.m  utils.c  v4l2uvc.c  v4l2uvc.h
src/imagecapture/.deps/: avilib.Po  color.Po  gui.Po  imageCapture.Po  imageProc.Po  svdDynamic.Po  utils.Po  v4l2uvc.Po
