bin_PROGRAMS = roboSoccer
roboSoccer_SOURCES = roboSoccer.c imagecapture/imageCapture.c imagecapture/avilib.c imagecapture/color.c imagecapture/gui.c imagecapture/imageProc.c imagecapture/svdDynamic.c imagecapture/utils.c imagecapture/v4l2uvc.c \
			API/btcomm.c roboAI.c
CC=g++
AM_CPPFLAGS=-fpermissive
